--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,11 @@
             "version": "1.0.0",
             "minecraft_version": "1.20.1",
             "loader_type": "forge",
-            "loader_version": "",
+            "loader_version": "47.4.10",
+            "forge_installer_url": "https://github.com/BatyaTrade/industrial-genesis/releases/download/forge/forge-1.20.1-47.4.10-installer.jar",
+            "java_major": 17,
+            "java_url": "https://github.com/BatyaTrade/industrial-genesis/releases/download/java/jdk-17.0.12_windows-x64_bin.zip",
+            "java_sha256": "",
             "modpack_url": "https://github.com/BatyaTrade/industrial-genesis/releases/download/v1.0.0/modpack.zip",
             "changelog": "Первый релиз Industrial Genesis!",
             "file_hash": "",
