--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
             "loader_version": "47.4.10",
             "forge_installer_url": "https://github.com/BatyaTrade/industrial-genesis/releases/download/forge/forge-1.20.1-47.4.10-installer.jar",
             "java_major": 17,
-            "java_url": "https://github.com/BatyaTrade/industrial-genesis/releases/download/java/jdk-17.0.12_windows-x64_bin.zip",
+            "java_url": "https://github.com/BatyaTrade/industrial-genesis/releases/download/java/OpenJDK17U-jdk_x64_windows_hotspot_17.0.17_10.zip",
             "java_sha256": "",
             "modpack_url": "https://github.com/BatyaTrade/industrial-genesis/releases/download/v1.0.0/modpack.zip",
             "changelog": "Первый релиз Industrial Genesis!",
